[package]
name = "currencies"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/sam0x17/currencies"
description = "Allows for generic manipulation of currencies (both real-world and cryptocurrencies) with optionally compile-time enforced checked math and support for all ISO-4217 currencies."
keywords = ["money", "currency", "cryptocurrency", "dollar", "currencies"]
authors = ["sam0x17"]
license = "MIT"

[dependencies]
num-integer = "0.1"
num-traits = "0.2"
primitive-types = { version = "0.12", features = ["num-traits"] }
uint = "0.9"
