workspace = { members = ["core"] }
[package]
name = "currencies"
version = "0.3.2"
edition = "2021"
repository = "https://github.com/sam0x17/currencies"
description = "Allows for generic manipulation of currencies (both real-world and cryptocurrencies) with optionally compile-time enforced checked math and support for all ISO-4217 currencies."
keywords = ["money", "currency", "cryptocurrency", "dollar", "currencies"]
authors = ["sam0x17"]
license = "MIT"

[dependencies]
currencies-core = { version = "0.3.2", path = "core" }

[features]
default = ["parsing"]
serde = ["currencies-core/serde"]
std = ["currencies-core/std"]
parsing = ["currencies-core/parsing"]
