workspace = { members = ["core", "macros"] }
[package]
name = "currencies"
version = "0.4.0"
edition = "2021"
repository = "https://github.com/sam0x17/currencies"
description = "Allows for generic manipulation of currencies (both real-world and cryptocurrencies) with optionally compile-time enforced checked math and support for all ISO-4217 currencies."
keywords = ["money", "currency", "cryptocurrency", "dollar", "currencies"]
authors = ["sam0x17"]
license = "MIT"

[dependencies]
currencies-core = { version = "0.4.0", path = "core" }
currencies-macros = { version = "0.4.0", path = "macros" }

[features]
default = ["parsing"]
serde = ["currencies-core/serde"]
std = ["currencies-core/std"]
parsing = ["currencies-core/parsing"]
